# ppxlib-simple-example

./: .gitignore  LICENSE  Makefile  README.md  dune  dune-project  ideas.org  log.txt  notes.org  package.json  ppx-simple-example.opam  test.sh
.github/workflows/: ci.yml
dump/.test.eobjs/native/: dune__exe__Test.cmx.f278d9.dump
dump/src/.simpleppx.objs/byte/: ppx.cmo.067909.dump  ppx.cmo.2a1085.dump  ppx.cmo.2ee7b9.dump  ppx.cmo.304085.dump  ppx.cmo.3939ef.dump  ppx.cmo.42fc80.dump  ppx.cmo.4afc47.dump  ppx.cmo.50298c.dump  ppx.cmo.64b3f2.dump  ppx.cmo.660c30.dump  ppx.cmo.66b86b.dump  ppx.cmo.711724.dump  ppx.cmo.7a9d48.dump  ppx.cmo.83bac3.dump  ppx.cmo.91880f.dump  ppx.cmo.ae5296.dump  ppx.cmo.ae638b.dump  ppx.cmo.b5e74b.dump  ppx.cmo.c15e8d.dump  ppx.cmo.c318da.dump  ppx.cmo.c7d2c3.dump  ppx.cmo.d1392b.dump  ppx.cmo.d27a25.dump  ppx.cmo.d69beb.dump  ppx.cmo.d99093.dump  ppx.cmo.e80123.dump  ppx.cmo.f3eba4.dump
dump/src/.simpleppx.objs/native/: ppx.cmx.3302cf.dump  ppx.cmx.70f44e.dump  ppx.cmx.8055b5.dump  ppx.cmx.96c9e3.dump  ppx.cmx.c33e1f.dump  ppx.cmx.ccb2be.dump  ppx.cmx.d22d66.dump  ppx.cmx.d4d5be.dump  ppx.cmx.ddffba.dump  ppx.cmx.f144f3.dump  ppx.cmx.f4f128.dump
dump/test/.test.eobjs/byte/: dune__exe__Test.cmi.8c287a.dump  dune__exe__Test.cmo.cef8cd.dump
dump/test/.test.eobjs/native/: dune__exe__Test.cmx.b848be.dump  dune__exe__Test.cmx.f78826.dump
esy.lock/: index.json
src/: CGraph.ml  Graph.ml  GraphPaths.ml  PartA.ml  PartB.ml  Ppx.re  dune  emit_code.ml  emitthecode.ml  gen.ml  gen3.ml  gen5.ml  gen6.ml  ppx.ml  ppxlibextras.ml
test/: Graph.ml  PartA.ml  Preamble.ml  basic.t  dune  gen4.ml  test.expected.ml  test.expected.re  test.ml  test.re  unimath.ml  unimath.mli  unimath_graph.ml  unimath_graph.mli
test/basic.t/: run.t
