(env
 (_
  (flags
   (:standard -warn-error -8-9-26-27-11 -dtypedtree -dparsetree -dump-dir /home/mdupont/2024/01/07/ppxlib-simple-example/dump/ -dlambda -annot -dlocations -dsource -dshape -drawlambda  ))))

(library
 (name simpleppx)
 (wrapped false)
 (public_name simple-ppx)
 (kind ppx_rewriter)
 (libraries ppxlib batteries))
