(executable
 (name pp)
 (modules pp)
 (libraries ppxlib SimplePpx.lib)
)

(rule
 (targets test.actual.re)
 (deps (:pp pp.exe) (:input test.re))
 (action
  (progn
   (with-stdout-to %{targets}
    (run refmt --parse re --print ml %{input})
   )
   (run ./%{pp} --impl %{targets} -o %{targets})
   (run refmt --parse ml --print re --in-place %{targets})
  )
 )
)

(rule
 (alias runtest)
 (deps (file test.expected.re) (file test.actual.re))
 (action (diff test.expected.re test.actual.re))
)